04-deploy/deployment-drupal.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drupal
  labels:
    name: drupal
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
  name: "service-drupal"
  namespace: "drupal"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: "app-drupal"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app: app-drupal
  name: "deployment-drupal"
  namespace: "drupal"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-drupal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-drupal
    spec:
      volumes:
        - name: vol-drupal-sites
          persistentVolumeClaim: 
            claimName: efs-claim-1
      containers:
        - name: app-drupal-9
          image: ydbalaji/kubernetes-drupal-9:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html/web/sites/default/files
              name: vol-drupal-sites
              subPath: drupal-sites
